--- a/python-sql/Python-MySQL.ipynb
+++ b/python-sql/Python-MySQL.ipynb
@@ -56,8 +56,8 @@
     "host_ip = \"127.0.0.1\"\n",
     "port = \"3306\"\n",
     "\n",
-    "user_id = \"jtupitza\"\n",
-    "pwd = \"Passw0rd123\"\n",
+    "user_id = \"root\"\n",
+    "pwd = \"<yourpassword>\"\n",
     "db_name = \"northwind\""
    ]
   },
